# AndroidCamera

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  YuvUtil.cpp  YuvUtil.h  native-lib.cpp
app/src/main/java/com/aniljing/androidcamera/: Camera2Activity.java  Camera2WithYUV.java  CameraActivity.java  CameraXActivity.java  CameraXWithYUV.java  MainActivity.java  YuvUtil.java
app/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
